added better versions of scipy and numpy, exposes 8888

--- a/cpu/Dockerfile
+++ b/cpu/Dockerfile
@@ -18,6 +18,13 @@ RUN apt-get update && apt-get install -y \
   python-numpy \
   python-scipy
 
+# For SciPy
+RUN apt-get install libblas-dev liblapack-dev libatlas-base-dev gfortran
+
+# The versions come for fixing the bug at https://github.com/Theano/Theano/pull/3532
+RUN pip install numpy==1.9.3
+RUN pip install scipy==0.15.1
+
 # Install bleeding-edge Theano
 RUN pip install --upgrade --no-deps git+git://github.com/Theano/Theano.git
 
@@ -26,3 +33,5 @@ RUN pip install jupyter
 RUN pip install ipython
 RUN apt-get install htop
 RUN pip install --user nose-parameterized
+
+EXPOSE 8888
