--- a/gpu/Dockerfile
+++ b/gpu/Dockerfile
@@ -12,9 +12,14 @@ RUN apt-get update && apt-get install -y \
   libopenblas-dev \
   python-dev \
   python-pip \
-  python-nose \
-  python-numpy \
-  python-scipy
+  python-nose
+
+# For SciPy
+RUN apt-get install libblas-dev liblapack-dev libatlas-base-dev gfortran
+
+# The versions come for fixing the bug at https://github.com/Theano/Theano/pull/3532
+RUN pip install numpy==1.9.3
+RUN pip install scipy==0.15.1
 
 # Set CUDA_ROOT
 ENV CUDA_ROOT /usr/local/cuda/bin
@@ -27,3 +32,5 @@ RUN pip install jupyter
 RUN pip install ipython
 RUN apt-get install htop
 RUN pip install --user nose-parameterized
+
+EXPOSE 8888
